--- a/WeeklyWinners.html
+++ b/WeeklyWinners.html
@@ -254,7 +254,7 @@
           
             <h3>🥇 FIRST PLACE 🥇</h3>   
             <a href="https://shorturl.at/glAH8" target="_blank">
-              <img src="Images/men.png" alt="1st" style="width: 200px; height: 200px;border-radius:50%"> 
+              <img src="Images/men.jpg" alt="1st" style="width: 200px; height: 200px;border-radius:50%"> 
             </a>
                         
             <p>Raj Kishore</p>
